# TwitterXFp

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
contas/: models.py  serializers.py  urls.py  views.py
contas/migrations/: 0001_initial.py
contas/templates/users/: login.html  register.html
feed/: models.py  urls.py  views.py
feed/migrations/: 0001_initial.py
feed/templates/feed/: feed.html
twitterxfp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
twitterxfp/templates/: hello_world.html
