[tool.poetry]
name = "twitterxfp"
version = "0.1.0"
description = ""
authors = ["Temistoclis <temistoclisxp58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
